static/home/css/style.css
/* ... */
.q2-button:hover{
	background-color: #1a1b1e;
	color: white;
}
/*.q2 .container div{
	width: 100%;
	height: 100%;
}*/
.q2 iframe{
	width: 56vw;
	height: 31.5vw;
	margin-bottom: 10px;
}
/*DONATE US STARTS*/

#donate-us{
	color: #616370;
	color: #818390;
	background-color: #26272c;
	background-color: #1a1b1e;
	text-align: center;
	padding: 10px 0;
}
#donate-us h1{
	margin: 0;
	padding: 5px 0;
	color: white;
}
#donate-us h1::after{
	content: "";
	display: block;
	width: 13%;
	margin: auto;
	margin-top: 2px;
	height: 2px;
	background-color: #ff8c00;
}
#donate-us .don-button{
	padding: 8px 20px;
	background-color: white;
	/*color: #616370;*/
	border: 1px #222 solid;
	border-radius: 13px;
	font-size: 15px;
	margin-bottom: 10px;
	cursor: pointer;
	transition: 400ms;
}
#donate-us .don-button:hover{
	padding: 8px 25px;
	background-color: red;
	color: white;
}

/*DONATE-US MODAL BOX STARTS*/

#don-modal{
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 2;
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0.4);
	padding-top: 100px;
}
.don-modal-contents{
	width: 80%;
	margin: auto;
	background-color: #ddd;
	border: 1px #222 solid;
	border-radius: 7px;
	overflow: auto;
	max-height: 65%;
}
.don-modal-contents .container{
	max-width: 90%;
}
.don-modal-contents .container h4{
	margin: 10px 0 5px;
}
.don-modal-contents h3{
	text-transform: uppercase;
	letter-spacing: 1px;
	font-weight: 100;
}
.don-modal-contents .close{
	position: absolute;
	top: 100px;
	right: 10%;
	float:right;
	color: #333;
	font-size: 28px;
	font-weight: bold;
	cursor: pointer;
	/*transform: translateX(-13px);*/
	padding-right: 13px; /*instead of transform property*/
	/*z-index: 2;*/
	/*margin-right: 13px; */
}
.don-box1{
	background-color: #666;
}
.don-box1 h2{
	margin: 0;
	padding: 17px 0 5px;
	text-align: center;
}
.don-box1::after{
	content: "";
	display: block;
	width: 16%;
	margin: auto;
	height: 2px;
	background-color: #ff8c00;
}
.don-box2, .don-box3{
	float: left;
	width: 50%;
	box-sizing: border-box;
	text-align: center;
}
.don-box2 p{
	margin: 0 0 20px;
}

/*CONTACT US STARTS*/

#contact-us{
	text-align: center;
	padding: 10px 0 0;
	/*background-color: #616370;*/
}
#contact-us h1{
	margin: 0;
	padding: 5px 0 15px;
}
#contact-us h1::after{
	content: "";
	display: block;
	width: 13%;
	margin: auto;
	margin-top: 2px;
	height: 2px;
	background-color: #ff8c00;
}
.con-box1{
	float: left;
	width: 50%;
	box-sizing: border-box;
	text-align: center;
}
.con-box1 p{
	margin-top: 0;
}
.con-box2 a{
	padding: 0 10px;
}
.con-box2 a:first-child:hover{
	color: blue;
}
.con-box2 a:nth-child(2):hover{
	color: #fb3958;
}
.con-box2 a:nth-child(3):hover{
	color: red;
}
.con-box2 a:last-child:hover{
	color: white;
}
#googleMap{
	width: 100%;
	height: 250px;
	margin: auto;
	box-sizing: border-box;
}
/*Contact Us Side Nav*/
.con-sidenav a{
	position: fixed;
	bottom: 90px;
	right: -95px;
	width: 105px;
	padding: 15px;
	text-decoration: none;
	color: white;
	background-color: red;
	border-radius: 5px 0 0 5px;
	transition: 0.3s;
	z-index: 2;
	/*cursor: pointer;*/
}
.con-sidenav a:hover{
	right:-10px;
}

.con-sidenav i{
	margin-right: 8px;
	font-size: 16px;
}


/*SCROLL TO TOP BUTTON*/

#scrollToTopButton {
	display: none;
	position: fixed;
	bottom: 15px;
	right: 10px;
	z-index: 99;
	font-size: 25px;
	border: none;
	outline: none;
	background-color: #ff8c00;
	color: white;
	cursor: pointer;
	padding: 6px;
	border-radius: 50%;
	height: 50px;
	width: 50px;
}
.fa-angle-double-up {
	font-weight: bolder;
}
#scrollToTopButton:hover {
	background-color: #D3D3D3;
}


/*FOOTER STARTS*/

footer{
	background-color: #1a1b1e;
	color: white;
	text-align: center;
	padding: 5px 0;
}

/*MEDIA QUERIES*/

@media(max-width: 1000px){
	/*For Youtube Video*/
	.q2 iframe{
		width: 64vw;
		height: 36vw;
	}
}
@media(max-width: 900px){
	/*For Youtube Video*/
	.q2 iframe{
		width: 72vw;
		height: 40.5vw;
	}
}
@media(max-width: 760px){
	/*For About Us section*/
	#about-us img{
		width: 80%;
	}
	.vision p, .mission p{
		width: 90%;
		margin: auto;
	}
	.vision div:first-child{
		grid-column-start: 1;
		grid-column-end: 3;
		margin: auto auto;
	}
	.vision div:nth-child(2){
		grid-column-end: 3;
		grid-row-start: 2;
	}
	.mission div:first-child{
		grid-column-start: 1;
		grid-column-end: 3;
		margin: auto auto;
	}
	.mission div:nth-child(2){
		grid-column-start: 1;
		grid-column-end: 3;
	}

	/*Initiatives section*/
	/*.card, .card1{
		height: 44.4vw;
		width: 33.3vw;
	}*/

	/*For Sercices section*/
	.box-1 div, .box-2 div{
		float: none;
		width: 100%;
	}
	.box-1 div:first-child, .box-2 div:first-child{
		padding: 0 20px 35px;
	}
	.box-1 div:nth-child(2), .box-2 div:nth-child(2){
		padding: 0 20px 35px;
	}
}
@media(max-width: 600px){
	/*For Youtube Video*/
	.q2 iframe{
		width: 80vw;
		height: 45vw;
	}
}
@media(max-width: 500px){
	/*For Youtube Video*/
	/*.q2 iframe{
		height: 35vh;
	}*/

	/*Initiatives section*/
	/*.card, .card1{
		height: 80vw;
		width: 60vw;
	}*/

	/*For Donate Us modal box*/
	.don-box2, .don-box3{
		float: none;
		width: 100%
	}
}
@media(max-width: 450px){
	/*For CONTACT US section*/
	.con-box1{
		float: none;
		width: 100%;
	}
	.con-box2 p{
		margin-top: 20px;
	}

	/*For About Us section*/
	#about-us img{
		width: 90%;
	}

	/*For Showcase section*/
	#showcase h1{
		margin-top: 100px;
	}

	/*For Youtube Video*/
	/*.q2 iframe{
		height: 30vh;
	}*/
}
@media(max-width: 400px){
	/*For Jagrati Branding*/
	#branding{
		margin: 11px 0;
	}
	.branding1{
		float: none;
		display: block;
		margin-top: -4px;
		margin-left: 03px;
	}
	.logo{
		height: 70px;
	}

	/*Initiatives section*/
	#initiatives .container{
		max-width: 100%;
	}

	/*For SERVICES section*/
	.box-1 div:first-child, .box-2 div:first-child{
		padding: 0 10px 35px;
}
	.box-1 div:nth-child(2), .box-2 div:nth-child(2){
		padding: 0 10px 35px;
	}
}
@media(max-width: 350px){
	/*For About Us section*/
	#about-us img{
		width: 100%;
	}
	.vision p, .mission p{
		width: 95%;
	}
}
/* ... */

